--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4554,3 +4554,27 @@ ul.nav_menu_1 {
     #status{
         width: 100% !important;
     }
+
+
+.add-note-btn{
+    padding: 3px 11px;
+    border-radius: 100%;
+    float: right;
+    margin: 5px 5px 8px 0px;
+    border: 1px solid #6153AE;
+    background: #fff;
+    font-size: 23px;
+    color: #6153AE;
+}
+
+.edit-note-btn{
+    float:right;
+    border: 1px solid #CFCFCF;
+    padding: 5px 10px;
+    border-radius: 3px;
+    color:#A2A2A2;
+    background-color: #f7f7f7;
+    i{
+        margin-right: 5px;
+    }
+}
