--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -1,6 +1,5 @@
 {% load get_course_filters get_username from ndf_tags %}
 {% load simple_filters %}
-
 <div class="notebook">
     {% comment %}
     <div class="row notebook-header collapse">
@@ -73,7 +72,7 @@
                     {% comment %}
                     <a href="#" data-reveal-id="newNoteModal" class="button expand radius" style="margin: 0em 0em 1em;"><i class="fi-plus"></i> </a>
                     {% endcomment %}
-                    <a class="button radius add-note-btn"  style="padding: 3px 11px;border-radius: 100%;float: right;margin: 5px 5px 8px 0px;border: 1px solid #6153AE;background: #fff;font-size: 23px;color: #6153AE;"><i class="fi-plus"></i></a>
+                    <a class="add-note-btn"><i class="fi-plus"></i></a>
 <!--                     <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" class="button radius" style="padding: 3px 11px;border-radius: 100%;float: right;margin: 5px 5px 8px 0px;border: 1px solid #6153AE;background: #fff;font-size: 23px;color: #6153AE;"><i class="fi-plus"></i></a>
 
  -->                    {% endif %}
@@ -430,8 +429,7 @@
         });//end of ajax
     }
     $(document).on('click', '.add-note-btn', function() {
-        node_id = $(this).attr('data-note-id')
-        load_page_create_edit(node_id)
+        load_page_create_edit()
     });
 
     function load_page_create_edit(node_id){
@@ -453,4 +451,11 @@
         });//end of ajax
 
     }
+
+    $(document).ready(function(){
+        {% if create_flag %}
+            load_page_create_edit()
+        {% endif %}
+
+    })
 </script>
