--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
@@ -73,7 +73,7 @@
 <!--                 <a href="{% url 'page_create_edit' group_id node.pk %}?course_event_id={{group_id}}&blog_type=True"
                     style="float:right;     border: 1px solid #CFCFCF; padding: 5px 10px; border-radius: 3px;color:#A2A2A2;background-color: #f7f7f7;"><i class="fi-pencil" style="margin-right: 5px;"></i>Edit</a>
  -->
-                <a class="add-note-btn" data-note-id="{{node.pk}}" style="float:right; border: 1px solid #CFCFCF; padding: 5px 10px; border-radius: 3px;color:#A2A2A2;background-color: #f7f7f7;"><i class="fi-pencil" style="margin-right: 5px;"></i>Edit</a>
+                <a class="edit-note-btn" data-note-id="{{node.pk}}" ><i class="fi-pencil"></i>Edit</a>
 
              {% endif %}
         </div>
@@ -139,5 +139,10 @@ $(document).on('click','.view-more-tags',function(){
         $(this).text("Less")
     }
 })
+
+    $(document).on('click', '.edit-note-btn', function() {
+        node_id = $(this).attr('data-note-id')
+        load_page_create_edit(node_id)
+    });
 
 </script>
