scroll issue in comments resolved

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -95,7 +95,8 @@
                 {# {{node.content|safe}} #}
                 {% include "ndf/node_ajax_content.html" with node=node expand_content=True  no_discussion=True hide_breadcrumbs=True %}
               </div>
-
+              <div class="discussion-area activity_page_rendered" style="overflow-x:auto;overflow-y:hidden">
+                
                 {% if node_discussion %}
                   {% get_thread_node node.pk as thread_node %}  
                     {% if thread_node %}
@@ -107,6 +108,7 @@
                         {% include 'ndf/in-line-texteditor.html' with var_name="content_org" ckeditor_toolbar="LMSStuentsToolbar" %}
                     {% endif %}
                 {% endif %}
+              </div>
               
               <div id="info-page-area">
                 
