--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -291,14 +291,14 @@
     <!-- </div> -->
     <hr/>
     <div class="row asset-comments-section">
-      <div class="small-10 columns" id="view-discussion">
+      <div class="small-10 columns" id="view-discussion" style="overflow-x:auto;overflow-y:hidden">
             <!-- discussion content area -->
             {% if user.is_authenticated %}
             {% get_thread_node asset_obj.pk as thread_node %}
             {% if thread_node and "QuizItemEvent" not in asset_obj.member_of_names_list %}
                 {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
                 {% get_node thread_node as thread_node_obj %}
-                {% include 'ndf/in-line-texteditor.html' with node=thread_node_obj var_name="content_org" allow_to_comment=True ckeditor_toolbar="BasicToolbar" %}
+                {% include 'ndf/in-line-texteditor.html' with node=thread_node_obj var_name="content_org" allow_to_comment=True ckeditor_toolbar="LMSStuentsToolbar" %}
             {% endif %}
             {% endif %}
 
