--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -438,7 +438,8 @@
 
           data: {
             node_id: node_id,
-            detail_url: "course_notebook_note"
+            detail_url: "course_notebook_note",
+            editor_type: "LMSStuentsToolbar"
           },
 
           type: "GET",
@@ -447,6 +448,7 @@
 
           success: function(data){
             $(".note-page").html(data);
+            $(".note-page").css('margin-top: 30px')
           },
         });//end of ajax
 
