--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -24,9 +24,9 @@
                 <div class="left">
                 <h5>Description</h5>
                 {{source_obj.content|safe}}
-                </div>
-                <div class="right">
-                    {% include "ndf/html_editor.html" with var_name="content" var_placeholder="Enter the content here" var_value=node_obj.content|safe|default_if_none:"" node_id=node_obj.pk ckeditor_toolbar="GeneralToolbar" %}
+                </div><br/> 
+                <div class="left">
+                    {% include "ndf/html_editor.html" with var_name="content" var_placeholder="Enter the content here" var_value=node_obj.content|safe|default_if_none:"" node_id=node_obj.pk ckeditor_toolbar=editor_type %}
                 </div>
             </div>
             <hr/>
