--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -102,10 +102,10 @@
                     {% if thread_node %}
                         {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
                         {% get_node thread_node as thread_node_obj %}
-                        {% include 'ndf/in-line-texteditor.html' with node=thread_node_obj var_name="content_org" ckeditor_toolbar="LMSStuentsToolbar" %}
+                        {% include 'ndf/in-line-texteditor.html' with node=thread_node_obj var_name="content_org" ckeditor_toolbar="LMSStudentsToolbar" %}
                     {% else %}
                         {% get_disc_replies node.pk group_id global_disc_all_replies as all_replies %}
-                        {% include 'ndf/in-line-texteditor.html' with var_name="content_org" ckeditor_toolbar="LMSStuentsToolbar" %}
+                        {% include 'ndf/in-line-texteditor.html' with var_name="content_org" ckeditor_toolbar="LMSStudentsToolbar" %}
                     {% endif %}
                 {% endif %}
               </div>
