passing corrected ckeditor toolbar

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -439,7 +439,7 @@
           data: {
             node_id: node_id,
             detail_url: "course_notebook_note",
-            editor_type: "LMSStuentsToolbar"
+            editor_type: "LMSStudentsToolbar"
           },
 
           type: "GET",
