--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -19,7 +19,8 @@
 <div class="lms_page">
      <div class="lms_banner">
        <div class="small-12 columns lms_heading">
-    <div class="left unit_name"> {% firstof group_object.altnames group_object.name  %}</div>
+        <div class="left unit_name"> {% firstof group_object.altnames group_object.name  %}
+        </div>
           {% if is_gstaff %}
           <div class="right course_actions">
 
