--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4625,6 +4625,17 @@ ul.nav_menu_1 {
     color: #6153AE;
 }
 
+.bef-note-btn{
+    padding: 3px 11px;
+    border-radius: 100%;
+    float: right;
+    margin: 5px 5px 8px 0px;
+    border: 1px solid #6153AE;
+    background: #fff;
+    font-size: 23px;
+    color: #6153AE;
+}
+
 .edit-note-btn{
     float:right;
     border: 1px solid #CFCFCF;
