Header icon background color changed, and conflict resolved

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -41,7 +41,7 @@
                       <img src="{{MEDIA_URL}}{{prof_pic.if_file.original.relurl}}" id="profile-img">
                       {{ user.username }}
                     {% else %}
-                            <img class="profile-img" style="background-color:#d18425;" src="/static/ndf/bower_components/foundation-icon-fonts/svgs/fi-torso.svg" >
+                            <img class="profile-img" style="background-color:rgba(0, 0, 0, 0.34);" src="/static/ndf/bower_components/foundation-icon-fonts/svgs/fi-torso.svg" >
                             {{ user.username }}
                     {% endif %}
                     </a>
