--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -6,6 +6,10 @@
 
 {% block title %} Unit {% endblock%}
 
+{% block head %}
+  <script src="/static/ndf/bower_components/jquery-backstretch/jquery.backstretch.min.js"></script>
+{% endblock head %}
+
 {% block body_content %}
 {% get_group_object groupid as group_object %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
@@ -216,6 +220,11 @@
 
 {% endcomment %}
 
-  
+<script type="text/javascript">
+  var imgSrc = $('.lms_banner .div-height img').attr('src');
+  $('.lms_banner .div-height img').attr('src', '');
+  $('.lms_banner .div-height img').attr('alt', '');
+  $('.lms_banner').backstretch(imgSrc);
+</script>
 
 {% endblock %}
