--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
@@ -1,6 +1,7 @@
 {% load i18n %}
-{% load get_relation_value from ndf_tags %}
+{% load get_relation_value get_event_status from ndf_tags %}
 
+    {% get_event_status node as get_status %}
 <div class="unit_card">
     {% comment %}
     <div class="unit_status in-progress-status">
@@ -17,6 +18,9 @@
     {% if "base_unit" in node.member_of_names_list %}
     <div class="raw_material_asset">DRAFT</div>
     {% endif  %}
+    {% if get_status %}
+        <div class="status-{{get_status}}">{{get_status}}</div>
+    {% endif %}
     <div class="unit_header">
     {% if "announced_unit" in node.member_of_names_list %}
         {% get_relation_value node.pk 'has_banner_pic' as grel_dict %}
