--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4545,6 +4545,23 @@ ul.nav_menu_1 {
   letter-spacing: 0.4px;
 }
 
+.status-draft {
+  width: auto;
+  top: -1.15em;
+  position: absolute;
+  display: inline-block;
+  color: #fff;
+  font-family:OpenSans-Bold;
+  right: 1em;
+  padding: 0.3em 0.5em;
+  text-transform: uppercase;
+  font-size: 10px;
+  border-radius: 4px;
+  //border: 2px solid #ffc14e;
+  background-color: grey;
+  letter-spacing: 0.4px;
+}
+
 
 .lesson-dropdown ul {
     display:none;
