--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -14,6 +14,8 @@
  
  <!-- LMS.html -->
 
+ {% include "ndf/buddy.html" %}
+
 {% include 'ndf/widget_user_access_modal.html' %}
 
 <div class="lms_page">
